0032826: Data Exchange - use OSD_FileSystem within RWStl::ReadAscii() and StepFile_Read()